<resources>
    <string name="app_name">恢復日記</string>
    <string name="loading">載入中</string>
    <string name="brac">酒精濃度</string>
    <string name="start">開始</string>
    <string name="recoverying">回復中</string>
    <string name="morning">早上</string>
    <string name="morning_time">0&#8211;12</string>
    <string name="noon">下午</string>
    <string name="noon_time">12&#8211;20</string>
    <string name="night">晚上</string>
    <string name="night_time">20&#8211;24</string>
    <string name="today_test">今日測試</string>
    <string name="today_test_none">尚未測試</string>
    <string name="week_test">每周測試統計</string>
    <string name="month_test">每月統計測試</string>
    <string name="morning_short">早</string>
    <string name="noon_short">午</string>
    <string name="night_short">晚</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="test_pass">通過</string>
    <string name="test_fail">不通過</string>
    <string name="test_none">未測試</string>
    <string name="done">完成</string>
    <string name="storytelling_page_help">周數</string>
    <string name="emotion">心情量尺</string>
    <string name="emotion_short">心情</string>
    <string name="craving">渴求指數</string>
    <string name="craving_short">渴求</string>
    <string name="total_result">綜合資料</string>
    <string name="analysis_counter">已獲得點數</string>
    <string name="analysis_saving">已節省金錢</string>
    <string name="analysis_rank">您的排名</string>
    <string name="high">高</string>
    <string name="low">低</string>
    <string name="after_test_pass">做得很好！</string>
    <string name="after_test_fail">好好加油！</string>
    <string name="after_questionnaire">繼續加油！</string>
    <string name="result">檢測結果</string>
    <string-array name="emotion_state">
        <item>　沮喪　</item>
        <item>　低落　</item>
        <item>　普通　</item>
        <item>　愉快　</item>
        <item>　快樂　</item>
    </string-array>
    <string-array name="craving_state">
        <item>無\n　</item>
        <item>ㄧ點\n</item>
        <item>輕微\n可以控制</item>
        <item>輕度\n但未行動</item>
        <item>輕中度\n蠢蠢欲動</item>
        <item>中度\n想去買</item>
        <item>中強度\n等一下買</item>
        <item>強烈\n考慮要喝</item>
        <item>很強烈\n猶豫再喝</item>
        <item>極強烈\n馬上就喝</item>
    </string-array>
    <string name="wait">請稍待</string>
    <string name="msg_box_title">自我了解</string>
    <string name="msg_box_help1">您的心情量尺：</string>
    <string name="msg_box_help2">您的渴求程度：</string>
    <string name="msg_box_help3">是否回報現在位置？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="send">寄送</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="Iknow">我知道了</string>
    <string name="last">上一則</string>
    <string name="next_one">下一則</string>
    <string name="go_result">看測試結果</string>
    <string name="msg_box_toast_cancel">確定放棄填寫？</string>
    <string name="msg_box_toast_send">確定完成自我了解？</string>
    <string name="notification_msg_1">該檢測了！</string>
    <string name="test_guide_start_top">請點選\'開始\'進行測試</string>
    <string name="test_guide_start_bottom">測試尚未開始</string>
    <string name="test_guide_fivesecond_bottom">請蓄積口水</string>
    <string name="test_guide_testing_top">請將臉對於螢幕中央，並吐口水於管中</string>
    <string name="test_guide_testing_bottom">檢測器已可進行測試</string>
    <string name="test_guide_notenough_top">口水量不足</string>
    <string name="test_guide_notenough_bottom">請在10秒內再吐一口水</string>
    <string name="test_guide_confirm_top">請稍後</string>
    <string name="test_guide_confirm_bottom">口水確認中</string>
    <string name="test_guide_reset_bottom">請開啟檢測器</string>
    <string name="test_guide_done_bottom">測試完成！</string>
    <string name="test_guide_test_timeout">測試超時</string>
    <string name="test_guide_fail_retry">測試失敗，請更換試紙匣後重試</string>
    <string name="test_guide_retry">請更換試紙匣後重試</string>
    <string name="test_guide_device_notsupport">裝置不支援</string>
    <string name="test_guide_connect_timeout">連接逾時</string>
    <string name="test_guide_connect_fail">連接中斷</string>
    <string name="test_guide_no_testplug">請將試紙匣插入裝置</string>
    <string name="test_guide_init_top">請稍待，檢測器準備中</string>
    <string name="test_guide_init_bottom">請稍待，檢測器準備中</string>
    <string name="test_guide_update_top">請於倒數結束前重新進行酒測</string>
    <string name="test_guide_update_bottom">重新測試倒數中</string>
    <string name="test_guide_recovery_top">請稍待</string>
    <string name="test_guide_not_turn_on">未啟動酒測裝置</string>
    <string name="test_guide_test_fail">酒測器沒電了</string>
    <string name="test_guide_multi_blow">吹氣不穩以致測試失敗</string>
    <string name="test_guide_zero_duration">連線錯誤，請重啟酒測器及手機藍牙功能</string>
    <string name="test_guide_pressure_error">酒測器有損壞，請聯絡戒酒小幫手團隊予以更換</string>
    <string name="test_guide_high_initial">酒測器未完全回復，請將酒測器啟動並放在通風處兩分鐘再測試</string>
    <string name="test_guide_msg_box">請依對話框指示進行操作</string>
    <string name="test_guide_end">請點選\'確定\'按鈕</string>
    <string name="tutorial_next">點擊進入下一步</string>
    <string-array name="tutorial_step">
        <item>按下開關，使指示燈亮起</item>
        <item>進入測試頁面按下開始按鈕</item>
        <item>對準吹氣口持續吹氣五秒鐘</item>
    </string-array>
    <string name="tutorial_step1">按下開關，使指示燈亮起</string>
    <string name="tutorial_step2">進入測試頁面按下開始按鈕</string>
    <string name="tutorial_step3">對準吹氣口持續吹氣五秒鐘</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="analysis_counter_help">您已獲得：</string>
    <string name="analysis_counter_counter">點</string>
    <string name="analysis_counter_coupon">張禮卷</string>
    <string name="analysis_saving_help">您已節省：</string>
    <string name="analysis_rank_month_help">整體排名：</string>
    <string name="analysis_rank_week_help">本周排名：</string>
    <string-array name="analysis_rank_change_help">
        <item>第一名</item>
        <item>第二名</item>
        <item>第三名</item>
        <item></item>
        <item>進步了</item>
        <item>後退了</item>
    </string-array>
    <string name="dollor_sign">$</string>
    <string name="audio_box_toast_timeup">一分鐘到了</string>
    <string name="audio_box_toast_record_end">完成錄音</string>
    <string name="audio_box_toast_play_end">結束播放</string>
    <string name="audio_box_playing">播放中</string>
    <string name="audio_box_recording">錄音中</string>
    <string name="audio_box_preparing">準備中</string>
    <string name="total">總共</string>
    <string name="minute">分鐘</string>
    <string name="second">秒</string>
    <string-array name="audio_box_help">
        <item>錄下或聆聽在</item>
        <item>的心情\n(最長可達一分鐘)</item>
    </string-array>
    <string name="quote_next_message">請按此看延伸學習‧‧‧</string>
    <string name="call_to">要聯絡誰？</string>
    <string name="connect_to_family">跟親友聊天</string>
    <string name="connect_for_social_help">尋求社區心理諮商</string>
    <string name="connect_to_emotion_hot_line">聯絡心情專線</string>
    <string name="connect_null">沒有聯絡對象</string>
    <string name="call_check_help_emotion_hot_line">確定撥打心情專線？</string>
    <string name="call_check_help">確定要撥給 </string>
    <string name="question_sign">？</string>
    <string name="about_title">關於</string>
    <string name="about_help">詳細資料:</string>
    <string name="about_setting">設定：</string>
    <string name="about_time_gap">提醒時間間隔為：</string>
    <string-array name="setting_time_gap">
        <item>提醒時間間隔設為30分鐘</item>
        <item>提醒時間間隔設為60分鐘</item>
        <item>提醒時間間隔設為120分鐘</item>
        <item>關閉提醒功能</item>
    </string-array>
    <string-array name="about_message">
        <item>此應用程式由</item>
        <item>合作開發。</item>
        <item>開發目的為協助愷他命依賴患者在日常</item>
        <item>生活中能持續戒毒。此應用程式需要搭</item>
        <item>配專用口水檢測器方可使用。</item>
        <item>應用介面視覺設計：</item>
    </string-array>
    <string name="phone">聯絡開發團隊：</string>
    <string name="phone_number"><u>(02)3366-4926</u></string>
    <string name="phone_check">確定要聯絡開發團隊？</string>
    <string name="dot">、</string>
    <string name="ntu">國立台灣大學</string>
    <string name="intel_ntu">Intel-臺大創新研究中心</string>
    <string name="taipei_city_hospital">臺北市立聯合醫院</string>
    <string name="happ_design">happdesign.com</string>
    <string name="rickie_wu">Rickie Wu</string>
    <string name="yuda_huang">Yuga Huang</string>
    <string name="current_version">目前版本：</string>
    <string name="testTimeCheckToast">酒測器回復中</string>
    <string name="self_help_counter_unit">點</string>
    <string name="get_self_help_counter">+1點</string>
    <string name="emotion_box_playing">播放中</string>
    <string name="emotion_box_pause">暫停中</string>
    <string name="emotion_box_replay">重新撥放？</string>
    <string name="default_recreation_1">聽音樂</string>
    <string name="default_recreation_2">慢跑</string>
    <string name="default_recreation_3">打球</string>
    <string name="default_goal_good"> 機車</string>
    <string name="default_forbidden">您不是本實驗參加者，因此無法使用檢測功能</string>
    <string name="open_gps">請將位置資訊服務相關功能開啟</string>
    <string name="check_do_not_keep_activities">您已開啟“不要保留活動”且未啟用“位置資訊服務”。\n建議您至“設定->開發人員選項”下取消勾選“不要保留活動”。\n本次測試將不會回報您的位置</string>
    <string name="email"><u>ubicomplab.ntu@gmail.com</u></string>
    <string name="email_subject">[戒酒小幫手]問題回報</string>
    <string name="email_message">請問要如何寄送信件</string>
    <string name="email_reject">非本實驗受試者煩請不要寄送信件</string>
    <string name="email_fail">手機端未安裝信件寄送程式</string>
    <string name="website"><u>查看戒酒新知</u></string>
    <string name="know">了解</string>
    <string name="bonus">特殊獎勵</string>
    <string name="lock_message">恭喜您已完成戒酒小幫手的療程，感謝您於療程期間的協助，希望您之後繼續保持並遠離酒精！\n\n因為研究需求，將暫停使用戒酒小幫手三個月。 這段期間，請定期回診進行追蹤觀察，再次感謝你對本研究的幫忙。\n\n您現在可以選擇移除掉戒酒小幫手，或是暫時將戒酒小幫手保留在手機內。三個月後，若是有需要再次啟用戒酒小幫手，請點選最下面的"關於"以聯絡戒酒小幫手團隊。謝謝！\n\n戒酒小幫手團隊　敬上</string>
    <string name="lock_about">完成訊息：</string>
    <string name="radar_title">表現分析</string>
    <string name="radar_label0">自我\n檢測</string>
    <string name="radar_label0_full">自我檢測功能　完成度</string>
    <string name="radar_label0_0">是否常做檢測</string>
    <string name="radar_label0_1">是否常通過檢測</string>
    <string name="radar_label1">應對\n技巧</string>
    <string name="radar_label1_full">應對技巧功能　完成度</string>
    <string name="radar_label1_0">應對技巧</string>
    <string name="radar_label2">問答\n參與</string>
    <string name="radar_label2_full">問答參與功能　完成度</string>
    <string name="radar_label2_0">一般問答</string>
    <string name="radar_label2_1">隨機式問答</string>
    <string name="radar_label3">事件\n紀錄</string>
    <string name="radar_label3_full">事件紀錄功能　完成度</string>
    <string name="radar_label3_0">事件紀錄</string>
    <string name="score">分</string>
    <string-array name="radar_0_0">
        <item>每天進行口水檢測，是成功的第一步</item>
        <item>幸福，從拒絕愷他命開始</item>
        <item>表現優秀，請繼續加油！</item>
    </string-array>
    <string-array name="radar_0_1">
        <item>進行口水檢測，開始記錄停止使用愷他命</item>
        <item>持續通過口水檢測，證明自己有能力拒絕愷他命</item>
        <item>表現優秀，請繼續加油！</item>
    </string-array>
    <string-array name="radar_1_0">
        <item>可點擊\'！\'按鈕學習應對技巧</item>
        <item>開始培養應對技巧，來處理生活中會遇到的誘因！</item>
        <item>表現優秀，請繼續加油！</item>
    </string-array>
     <string-array name="radar_2_0">
        <item>點擊\'自我測驗\'，測試一下自己</item>
        <item>常常回答問題，來確定自己是否了解愷他命的危害</item>
        <item>表現優秀，請繼續加油！</item>
    </string-array>
    <string-array name="radar_2_1">
        <item>當打開活動記錄頁面，別忘了按下閃爍的星星回答問題</item>
        <item>每天都會隨機出現問題，讓自己能透過回答問題了解自己</item>
        <item>表現優秀，請繼續加油！</item>
    </string-array>
    <string-array name="radar_3_0">
        <item>別忘了每天記下發生的事喔！</item>
        <item>可隨時留下心情供自己日後思索！</item>
        <item>表現優秀，請繼續加油！</item>
    </string-array>
    <string name="result_fail">測試未成功，記錄無上傳。\n\n（請保持檢測器開啟，並置於與手機鄰近的地方。）\n\n立即回到測試頁面？</string>
    <string name="check_end">確定結束？</string>
</resources>